traversal.snake.Snake.scala.error
Compilation error:
Snake:5: error: not found: value EST
    if (estFaceMur && getDirection()==EST) {
                                      ^Snake:5: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur && getDirection()==EST) {
    ^